get all areas in search screen