@@ -11,9 +11,13 @@ import androidx.recyclerview.widget.RecyclerView;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
+import android.widget.AdapterView;
+import android.widget.ArrayAdapter;
 import android.widget.EditText;
 import android.widget.ImageView;
+import android.widget.Spinner;
 import android.widget.TextView;
+import android.widget.Toast;
 
 import com.example.foodplannerapp.R;
 import com.example.foodplannerapp.data.local.MealsLocalDataSource;
@@ -37,6 +41,7 @@ public class SearchFragment extends Fragment implements SearchListener, ViewInte
     RecyclerViewCategoryAdapter categoryAdapter;
     RecyclerViewAreaAdapter areaAdapter;
     PresenterImpl presenter;
+    Spinner spinner;
 
 
     public SearchFragment() {
@@ -63,13 +68,61 @@ public class SearchFragment extends Fragment implements SearchListener, ViewInte
         filterIcon = view.findViewById(R.id.filterSmallIcon);
         searchField = view.findViewById(R.id.searchTextField);
         recyclerView = view.findViewById(R.id.searchRecyclerView);
+        spinner=view.findViewById(R.id.spinner);
+        String[] items = {getString(R.string.categories), getString(R.string.ingredients), getString(R.string.areas)};
+
+        ArrayAdapter<CharSequence> adapter =new ArrayAdapter<CharSequence>
+                (getContext(), R.layout.spinner_item,items){
+            @NonNull
+            @Override
+            public View getView(int position, @Nullable View convertView,
+                                @NonNull ViewGroup parent) {
+                View view = super.getView(position, convertView, parent);
+                view.setVisibility(View.GONE);
+                return view;
+            }
+        };
+
+        spinner.setAdapter(adapter);
+        spinner.setOnItemSelectedListener(new AdapterView.OnItemSelectedListener() {
+            @Override
+            public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
+                String item = parent.getItemAtPosition(position).toString();
+                if(item.equals(getString(R.string.categories))){
+                    presenter.getAllCategories();
+                    searchField.setHint("Search Category");
+                    selectedItem.setText(R.string.categories);
+
+
+
+
+
+                }else if(item.equals(getString(R.string.areas))){
+                    presenter.getAllAreas();
+                    searchField.setHint("Search Area");
+                    selectedItem.setText(R.string.areas);
+                }else{
+                    presenter.getAllIngredients();
+                    searchField.setHint("Search Ingredient");
+                    selectedItem.setText(R.string.ingredients);
+
+
+                }
+
+            }
+
+            @Override
+            public void onNothingSelected(AdapterView<?> parent) {
+            }
+        });
         presenter = new PresenterImpl(MealsRepositoryImpl.getInstance(new MealsRemoteDataSource(), new MealsLocalDataSource(getContext())), this);
         presenter.getAllCategories();
         searchField.setHint("Search Category");
         GridLayoutManager gridLayoutManager = new GridLayoutManager(getContext(), 2);
         gridLayoutManager.setOrientation(RecyclerView.VERTICAL);
         recyclerView.setLayoutManager(gridLayoutManager);
-        categoryAdapter = new RecyclerViewCategoryAdapter(getContext(), Arrays.asList(), this);
+        categoryAdapter = new RecyclerViewCategoryAdapter(getContext(), List.of(), this);
+        areaAdapter=new RecyclerViewAreaAdapter(getContext(),List.of(), this);
         recyclerView.setAdapter(categoryAdapter);
     }
 
@@ -79,14 +132,15 @@ public class SearchFragment extends Fragment implements SearchListener, ViewInte
         if (list.get(0) instanceof Category) {
             categoryAdapter.setCategoryList(list);
             recyclerView.setAdapter(categoryAdapter);
-            searchField.setHint("Search Category");
+
 
 
         }else if (list.get(0) instanceof Area){
 
+
             areaAdapter.setAreaList(list);
             recyclerView.setAdapter(areaAdapter);
-            searchField.setHint("Search Area");
+
         }
 
     }
